--- a/README
+++ b/README
@@ -5,6 +5,7 @@ Sources:
 
 To do:
 . use more than just first pronunciation in cmudict
+. <er> is one phoneme etc
 . phone or phoneme?
 . manual error checking
 . reread cmloegcmluin
