--- a/README
+++ b/README
@@ -8,4 +8,5 @@ To do:
 . <er> is one phoneme etc
 . phone or phoneme?
 . manual error checking
+. transcribe some of the uncorrelateds
 . reread cmloegcmluin
