--- a/README
+++ b/README
@@ -10,6 +10,7 @@ To do:
 . manual error checking
 . transcribe some of the uncorrelateds
 . reread cmloegcmluin
+. ARPAbet -> IPA
 
 Changelog:
 - v0.1.0: First steps; Frequencies generally and post-/w/
