Default to local copies

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+Versions of local copies:
+- cmudict: 0.7b. Retrieved May 28, 2018.
+- kilgarriff: Retrieved May 28, 2018.
+
 Sources:
 - https://cmloegcmluin.wordpress.com/2012/11/10/relative-frequencies-of-english-phonemes/
 - http://www.speech.cs.cmu.edu/cgi-bin/cmudict
