--- a/README
+++ b/README
@@ -18,6 +18,9 @@ To do:
 x ARPAbet -> IPA
 
 Changelog:
+- v0.3.1: Various
+  - Move *.py into scripts/
+
 - v0.3.0: Various
   - Add local copies of source data and results
   - Default to local copies
