--- a/TODO
+++ b/TODO
@@ -4,5 +4,5 @@
 . phone or phoneme?
 . manual error checking
 . transcribe some of the uncorrelateds
-. reread cmloegcmluin
+. reread blumeyer
 x ARPAbet -> IPA
